--- a/static/index.html
+++ b/static/index.html
@@ -160,23 +160,21 @@
  			<div class="panel-body">
  				<h3 >The Best Vegan Restaurants of 2014 in San Diego<br/><br/></h3>
 
- 			<div class="row">
+<!--  			<div class="row">
 
-			<!-- PICTURE 1 -->
 	  		<div class="col-xs-6 col-md-3">
 	   		 <a href="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1" data-lightbox="image-1" class="thumbnail">
 	      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1"/>
 	    	</a>
 	  		</div>
 
-			<!-- PICTURE 2 -->
 	  		<div class="col-xs-6 col-md-3">
 	    	<a href="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg" data-lightbox="image-1" class="thumbnail">
 	    	<img src="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg"/>
 	    	</a>
 
 	  		</div>
-			</div>
+			</div> -->
 
     		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Ergo hoc quidem apparet, nos ad agendum esse natos. Illa sunt similia: hebes acies est cuipiam oculorum, corpore alius senescit; Ad corpus diceres pertinere-, sed ea, quae dixi, ad corpusne refers?
 
@@ -199,23 +197,20 @@
  			<div class="panel-body">
  			<h3 >Vegan Snack Recipe<br/><br/></h3>
 
- 				<div class="row">
+<!--  				<div class="row">
 
-				<!-- PICTURE 2 -->
 		  		<div class="col-xs-6 col-md-3">
 		    	<a href="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg" data-lightbox="image-2" class="thumbnail">
 		    	<img src="https://c2.staticflickr.com/8/7163/6750034613_2806e59dff_b.jpg"/>
 		    	</a>
 		  		</div>
 
-				<!-- PICTURE 1 -->
 		  		<div class="col-xs-6 col-md-3">
 		   		 <a href="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1" data-lightbox="image-2" class="thumbnail">
 		      	<img src="https://c1.staticflickr.com/3/2759/4218998081_ef0de9fbc9_z.jpg?zz=1"/>
 		    	</a>
 		  		</div>
-
-				</div>
+				</div> -->
 
 				Ingredients:
 				<br/><br/>
