--- a/static/foodfinder.html
+++ b/static/foodfinder.html
@@ -106,6 +106,22 @@
 		background-color: #7ea32f;
 	}
 }
+
+	/* Responsive embed CSS for Google Maps */
+    .google-maps {
+        position: relative;
+        padding-bottom: 75%; // This is the aspect ratio
+        height: 0;
+        overflow: hidden;
+    }
+    .google-maps iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        height: 100% !important;
+    }
+
     </style>
 
   </head>
@@ -152,6 +168,12 @@
 
 	<div class="container">
 		
+		<div class="google-maps">
+
+		<iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d13402.617189694329!2d-117.23119452590333!3d32.880864988683385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smarkets!5e0!3m2!1sen!2sus!4v1423084181223" width="600" height="450" frameborder="0" style="border:0"></iframe>
+
+		</div>
+
 		<!-- PANEL -->
 		<div class="panel panel-default ">
 
@@ -160,14 +182,28 @@
 
     		Gluten Free Items: Glutino, Abcd, Efgh
     		<br/>
-    		Vegan Items: Tofurky, Abcd, Efgh
+    		Vegan Items: Viana, Abcd, Efgh
     		<br/>
     		Vegatarian Items: Example, Abcd, Efgh
     		
     		<br/><br/>
-
 			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 121 </button>
   			</div>
+
+  			<div class="panel-body">
+ 				<h3 >1.1 mile away: Goody's Market<br/><br/></h3>
+
+    		Gluten Free Items: Applegate, Earthbound Farm, Etc
+    		<br/>
+    		Vegan Items: The Vegg, Abcd, Efgh
+    		<br/>
+    		Vegatarian Items: Lightlife, Nate's, Etc
+    		
+    		<br/><br/>
+			<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-up"></span> 36 </button>
+  			</div>
+
+
 		</div>
 
 		
